--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,15 @@
   "homepage": "https://github.com/Balatzar/slash-animate#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "eslint": "^3.11.0",
     "express": "^4.14.0",
-    "post-json": "^0.3.1"
+    "post-json": "^0.3.1",
+    "tape": "^4.6.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.11.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
