--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "coucou",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tape ./src/**/*spec.js",
     "start": "node app.js",
     "lint": "eslint ."
   },
